write queries for callData fetch, campaignInfo fetch, and updateCampaign

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ VOIPMS_USERNAME=mrseandezoysa@gmail.com
 VOIPMS_API_PASSWORD=Tulucaoption8
 
 # Postgres Database
-POSTGRES_HOST=X
-POSTGRES_DATABASE=X
-POSTGRES_PORT=X
-POSTGRES_USER=X
-POSTGRES_PASSWORD=X
+PGHOST=localhost
+PGDATABASE=X
+PGPORT=5432
+PGUSER=X
+PGPASSWORD=X
