--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.27.0",
+    "pg": "^8.3.0",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.27",
+    "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
