create db, tables, and add seed data

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VOIPMS_API_PASSWORD=Tulucaoption8
 
 # Postgres Database
 PGHOST=localhost
-PGDATABASE=X
+PGDATABASE=calltrackvoipms
 PGPORT=5432
-PGUSER=X
-PGPASSWORD=X
+PGUSER=ctvmuser
+PGPASSWORD=1234
