setup passport to initialize, then export

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ PGDATABASE=calltrackvoipms
 PGPORT=5432
 PGUSER=ctvmuser
 PGPASSWORD=1234
+
+# Secret key for authentication
+PASSPORT_JWT_SECRET=donutsistenemanta
