--- a/package.json
+++ b/package.json
@@ -6,33 +6,48 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "live": "node compiled/server.js",
-    "dev": "nodemon compiled/server.js"
+    "dev": "nodemon compiled/server.js",
+    "test:unit": "npx jest --watch unit",
+    "test:integration": "npx jest --watch integration"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/moment": "^2.13.0",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.3.0",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.9",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "nodemon": "^2.0.4"
+    "jest": "^26.2.2",
+    "nodemon": "^2.0.4",
+    "ts-jest": "^26.1.4"
   }
 }
