--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "live": "node compiled/server.js",
     "dev": "nodemon compiled/server.js",
+    "server": "tsc && node compiled/server.js",
     "test:unit": "npx jest --watch unit",
     "test:integration": "npx jest --watch integration"
   },
@@ -20,6 +21,7 @@
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
@@ -34,6 +36,7 @@
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/jest": "^26.0.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.27",
