--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/moment": "^2.13.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
@@ -28,21 +28,26 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.3.0",
+    "pg-format": "^1.0.4",
+    "pg-promise": "^10.5.8",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
+    "@types/cron": "^1.7.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/jest": "^26.0.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.0.27",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/pg": "^7.14.4",
+    "@types/pg-format": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
     "eslint": "^7.6.0",
