wip captureCallData function

--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ PGPASSWORD=1234
 
 # Secret key for authentication
 PASSPORT_JWT_SECRET=donutsistenemanta
+
+# Cryptr secret key
+CRYPTR_SECRET=milktrufflepalindrome
