--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cron": "^1.8.2",
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -36,11 +38,13 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/cron": "^1.7.2",
+    "@types/cryptr": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
     "@types/jest": "^26.0.9",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.159",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.0.27",
     "@types/passport": "^1.0.4",
