setup jest fetch mock

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "outDir": "compiled"
   },
   "include": [
-    "src"
+    "src", "__mocks__"
   ],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
