--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.7",
     "@types/express-session": "^1.17.0",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^26.0.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.159",
@@ -58,6 +59,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "jest": "^26.2.2",
+    "jest-fetch-mock": "^3.0.3",
     "nodemon": "^2.0.4",
     "ts-jest": "^26.1.4"
   }
