--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "rootDir": "src",
     "outDir": "compiled"
   },
   "include": [
-    "src", "__mocks__"
+    "src", "src/__mocks__"
   ],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "compiled"]
 }
